# test_task_3

./: README.md  domains.db  pyproject.toml  pytest.ini
app/: database.py  exceptions.py  helpers.py  main.py  project_data_types.py  services.py  settings.py
app/tests/: test_regex.py
